--- a/src/HomePage/SecondSection.css
+++ b/src/HomePage/SecondSection.css
@@ -10,7 +10,7 @@
   }
   
   .subtitle {
-    color: #7f8c8d;
+    color: #000;
     font-size: 1rem;
   }
   
@@ -18,10 +18,11 @@
     font-size: 2.5rem;
     font-weight: bold;
     margin-top: -10px;
+    color: #bb7564;
   }
   
   .description {
-    color: #7f8c8d;
+    color: #000;
     font-size: 1rem;
     margin-top: -1rem;
   }
