--- a/src/HomePage/ThirdSection.css
+++ b/src/HomePage/ThirdSection.css
@@ -95,7 +95,7 @@
   .view-all-button2 {
     display: flex;
     justify-content: center;
-    /* margin-top: 1rem; */
+    margin-top: -1.5rem;
   }
   
   .order-button2 {
@@ -110,6 +110,7 @@
     width: 270px;
     height: 50px;
     font-weight: 600;
+    
   }
   
   .order-button2:hover {
