--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -49,7 +49,7 @@
 .card-rating{
     font-size: 1.6rem;
     margin: 0 16px 8px;
-    color: black; 
+    color: gold; 
     display: flex;
     justify-content: space-between; 
     text-align: center;
