--- a/src/Cart/Cart.css
+++ b/src/Cart/Cart.css
@@ -67,11 +67,12 @@
   .delete-button {
     background-color: transparent;
     color: white;
-    padding-top: -8px;
+    padding: 8px;
     border: none;
     cursor: pointer;
   }
   .delete-button img{
+    padding-top: -20px;
     width: 20px;
     height: 20px;
   }
