--- a/src/Cart/Cart.css
+++ b/src/Cart/Cart.css
@@ -70,9 +70,11 @@
     padding: 8px;
     border: none;
     cursor: pointer;
+    background-color: red;
+    justify-content: center;
+    align-items: center;
   }
   .delete-button img{
-    padding-top: -20px;
     width: 20px;
     height: 20px;
   }
