--- a/src/Authentication/LoginForm.css
+++ b/src/Authentication/LoginForm.css
@@ -12,7 +12,7 @@
 }
 .login-btn{
   justify-content: center;
-  background-color: yellow ;
+  /* background-color: yellow ; */
   font-size: 1.2rem !important;
 }
 .login-btn:hover{
